--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "create": "node_modules/.bin/sequelize db:create",
+    "drop": "node_modules/.bin/sequelize db:drop",
+    "migrate": "node_modules/.bin/sequelize db:migrate",
     "start": "cross-env DEBUG=bookshelf nodemon ./bin/www",
     "test": "npm run test-unit && npm run test-integration",
     "test-unit": "cross-env NODE_ENV=test ./node_modules/.bin/mocha test/unit/*.test.js",
@@ -16,7 +18,10 @@
     "debug": "^3.1.0",
     "express": "^4.16.2",
     "jsonapi-serializer": "^3.5.6",
+    "jsonwebtoken": "^8.3.0",
     "morgan": "^1.7.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^6.1.0",
     "pg-hstore": "^2.3.2",
     "pug": "^2.0.0-rc.4",
