--- a/.sequelizerc
+++ b/.sequelizerc
@@ -3,4 +3,5 @@ const path = require('path');
 module.exports = {
   'config': path.resolve('config', 'database.js'),
   'models-path': path.resolve('models'),
+  'seeders-path': path.resolve('seeders'),
 }
