--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "create": "node_modules/.bin/sequelize db:create",
     "drop": "node_modules/.bin/sequelize db:drop",
     "migrate": "node_modules/.bin/sequelize db:migrate",
+    "seed": "node_modules/.bin/sequelize db:seed:all",
     "start": "cross-env DEBUG=bookshelf nodemon ./bin/www",
     "test": "npm run test-unit && npm run test-integration",
     "test-unit": "cross-env NODE_ENV=test ./node_modules/.bin/mocha test/unit/*.test.js",
